[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/ButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/phonetic.tres" type="Theme" id=2]
[ext_resource path="res://fonts/background.png" type="Texture" id=3]
[ext_resource path="res://ListenChoose.gd" type="Script" id=4]
[ext_resource path="res://art/validate.png" type="Texture" id=5]
[ext_resource path="res://art/back.png" type="Texture" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 102.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speak" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 450.0
margin_right = 573.0
margin_bottom = 102.0
theme = ExtResource( 1 )
text = "Parle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 1024.0
margin_bottom = 228.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/game"]
margin_right = 1024.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/game/Control"]
anchor_left = 0.05
anchor_right = 0.075
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gridCard" type="GridContainer" parent="MarginContainer/VBoxContainer/game/Control/MarginContainer"]
margin_right = 1049.0
custom_constants/vseparation = 90
custom_constants/hseparation = 90
columns = 3

[node name="Choice" type="HBoxContainer" parent="MarginContainer/VBoxContainer/game"]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 106.0
alignment = 1

[node name="Choice1" type="CheckBox" parent="MarginContainer/VBoxContainer/game/Choice"]
margin_left = 226.0
margin_right = 414.0
margin_bottom = 102.0
theme = ExtResource( 1 )
text = "Choix 1"
flat = true

[node name="Choice2" type="CheckBox" parent="MarginContainer/VBoxContainer/game/Choice"]
margin_left = 418.0
margin_right = 606.0
margin_bottom = 102.0
theme = ExtResource( 1 )
text = "Choix 2"
flat = true

[node name="Choice3" type="CheckBox" parent="MarginContainer/VBoxContainer/game/Choice"]
margin_left = 610.0
margin_right = 798.0
margin_bottom = 102.0
theme = ExtResource( 1 )
text = "Choix 3"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 1.0
margin_right = 101.0
margin_bottom = 100.0
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Validate" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -102.0
margin_right = 70.0
disabled = true
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Speak" to="." method="_on_Speak_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/game/Choice/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/game/Choice/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/game/Choice/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Validate" to="." method="_on_Validate_pressed"]
